applications/overlays/dev/app01/peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: app-ingress-compatible
  namespace: app01-weekend-com
spec:
  mtls:
    mode: PERMISSIVE
