applications/overlays/dev/app01/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app01-compute
  namespace: app01-weekend-com
spec:
  replicas: 2
  template:
    spec:
      containers:
        - name: app01
          image: ghcr.io/phelun/weekend-app01:ab83c54cfea88b882f56c61a8a300069607c6a27
