applications/overlays/dev/app01/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app01-ingress
  namespace: app01-weekend-com
spec:
  rules:
    - host: app01.weekend.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app01-service
                port:
                  number: 80
